# PhotoShare

./: .gitignore  LICENSE  README.md  alembic.ini  db.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 195bcba1d037_test.py
docs/: conf.py
docs/_build/doctrees/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  objects.inv  search.html
docs/_build/html/_sources/: index.rst.txt
fastapi_app/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
fastapi_app/docs/_build/doctrees/: environment.pickle
fastapi_app/docs/_build/html/: index.html  py-modindex.html  searchindex.js
fastapi_app/fastapi_app/src/conf/: config.py
fastapi_app/fastapi_app/src/database/: models.py
fastapi_app/fastapi_app/src/repository/: comments.py
fastapi_app/fastapi_app/src/routes/: comments.py  users.py
fastapi_app/fastapi_app/src/services/: auth.py  photo_service.py  storage.py
fastapi_app/fastapi_app/tests/: conftest.py  test_main.py  test_route_photo.py  test_service_auth.py  test_service_email.py
fastapi_app/src/: schemas.py
fastapi_app/src/database/: db.py
fastapi_app/src/repository/: search_filter.py  tags.py  users.py
fastapi_app/src/routes/: auth.py  photos.py  search_filter.py
fastapi_app/src/services/: email.py
fastapi_app/tests/: test_route_auth.py  test_route_comments.py  test_routes_search_filter.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: images.py  notes.py  tags.py  users.py
src/routes/: auth.py  images.py  users.py
src/services/: auth.py  user_service.py
