[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["Kiniaka <147816937+Kiniaka@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
psycopg2 = "^2.9.9"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
python-multipart = "^0.0.9"
pydantic = "^2.8.2"
fastapi-mail = "^1.4.1"
fastapi-limiter = "^0.1.6"
aioredis = "^2.0.1"
cloudinary = "^1.40.0"
pydantic-settings = "^2.3.4"
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"


[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
