[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Dawid Dziekan <dziekan.dawid@wp.pl>"]
readme = "README.md"
packages = [{include = "fastapi_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
psycopg2 = "^2.9.5"
alembic = "^1.9.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
libgravatar = "^1.0.3"
fastapi-mail = "^1.2.6"
redis = "^4.5.1"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.32.0"
sqlalchemy = "^2.0.4"
bcrypt = "4.0.1"
aiofiles = "^24.1.0"
pytest-asyncio = "^0.23.8"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
